# slf-arousalscoring

./: LICENSE  README.md  pyproject.toml
config_files/: tensorflow_MESA_arousals.yml  tensorflow_MESA_sleepstages.yml
notebooks/: test-model-performance.ipynb
src/slf_arousalscoring/: __about__.py  __init__.py  score_slf_dataset.py  train.py
src/slf_arousalscoring/utime_tf/: func_models.py  training.py
src/slf_simultscoring/: score_slf_dataset.py  train.py
src/slf_simultscoring/utime_tf/: training.py
